[package]
name = "cpu_usage"
version = "0.1.0"
edition = "2021"

[dependencies]
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
chrono = "0.4"
#sysinfo = "0.30.0"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
